--- a/recipes_v2_flask/templates/login.html
+++ b/recipes_v2_flask/templates/login.html
@@ -22,7 +22,7 @@
                     {% endif %}
                 {% endwith %}
                 <!-- Register form -->
-                <form action="/register" method="post">
+                <form action="/register" method="POST">
                     <div class="form-group">
                         <label for="first_name">First Name:</label>
                         <input type="text" class="form-control" id="first_name" name="first_name" required>
