--- a/recipes_v2_flask/templates/dashboard.html
+++ b/recipes_v2_flask/templates/dashboard.html
@@ -27,6 +27,15 @@
                 </div>
             </div>
         </div>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
         <div class="row mt-4">
             <div class="col-md-12">
                 <table class="table table-bordered">
@@ -45,10 +54,12 @@
                                 <td>{{ 'Yes' if recipe.under == 1 else 'No' }}</td>
                                 <td>{{ recipe.creator.first_name }}</td>
                                 <td>
-                                    <a href="#" class="btn btn-sm btn-info">view recipe</a>
+                                    <a href="/recipes/{{ recipe.id }}" class="btn btn-sm btn-info">view recipe</a>
                                     {% if current_user.id == recipe.creator.id %}
                                         <a href="/recipes/edit/{{ recipe.id }}" class="btn btn-sm btn-warning">edit</a>
-                                        <a href="/recipes/delete/{{ recipe.id }}" class="btn btn-sm btn-danger">delete</a>
+                                        <form action="/recipes/delete/{{ recipe.id }}" method="POST" class="d-inline-block">
+                                            <button class="btn btn-sm btn-danger">delete</button>
+                                        </form>
                                     {% endif %}
                                 </td>
                             </tr>
